# nativescript-v8-module

./: .gitignore  README.md  package.json  project.code-workspace  references.d.ts  tsconfig.base.json
apps/demo/: package.json
apps/demo/src/: main-page.xml
apps/demo/src/plugin-demos/: v8-module-cpp.ts  v8-module-cpp.xml
rust/: Cargo.toml  Makefile  README.md  build-android.sh  copy-android.sh  copy_ios.sh
rust/my_sdk/: Cargo.toml  Makefile  MySdk.podspec  copy-android.sh  copy_ios.sh
rust/my_sdk/src/: lib.rs
tools/: workspace-scripts.js
tools/assets/App_Resources/Android/: app.gradle  settings.gradle
tools/demo/: index.ts  tsconfig.json
tools/demo/v8-module-cpp/: index.ts
