[package]
name = "my_sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_sdk"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2.80"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
log = "0.4.17"
android_logger = "0.13.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
#jni = { version = "0.18.0", optional = true, default-features = false }


# [features]
# default = ["jni"]



